; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/isa/extr_clock.c_timer_spkr_setfreq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/isa/extr_clock.c_timer_spkr_setfreq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@i8254_freq = common dso_local global i32 0, align 4
@clock_lock = common dso_local global i32 0, align 4
@TIMER_CNTR2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timer_spkr_setfreq(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @i8254_freq, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sdiv i32 %3, %4
  store i32 %5, i32* %2, align 4
  %6 = call i32 @mtx_lock_spin(i32* @clock_lock)
  %7 = load i32, i32* @TIMER_CNTR2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = and i32 %8, 255
  %10 = call i32 @outb(i32 %7, i32 %9)
  %11 = load i32, i32* @TIMER_CNTR2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = ashr i32 %12, 8
  %14 = call i32 @outb(i32 %11, i32 %13)
  %15 = call i32 @mtx_unlock_spin(i32* @clock_lock)
  ret void
}

declare dso_local i32 @mtx_lock_spin(i32*) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @mtx_unlock_spin(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
